tests/negative/ownership/function_ownership_fail.tx

// Function Ownership - Negative Test (SOI-aware)
// ==================================
// With SOI, func(x) auto-borrows if x is used later.
// This test moves via assignment, then tries to use the moved variable.

class Item {
    name: string;
    constructor(n: string) { this.name = n; }
}

function main() {
    let item = new Item("Apple");
    
    // Move 'item' via assignment
    let consumed = item;
    
    // ERROR: Use of moved variable 'item'
    print(item.name);
}
